# sqs_sns_boto3

./: pyproject.toml
src/: sns.py  sqs.py
