[tool.poetry]
name = "sqs-sns-project"
version = "0.1.0"
description = ""
authors = ["yayo1983 <yazanenator@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.149"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
